test/invalid/prop-polymorphic-closure.js
var o2 =  { y: [], setY: function(x) { this.y = [x]; }, getY: function() { return this.y; } };

o2.setY(2);

var z = 'string';

z = o2.getY();
